--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
             <nav class="menu">
                 <a href="./index.html" class="logo link"><span class="web">Web</span class="studio">Studio</a>
                     <ul class="menu-nav">
-                        <li class="menu-nav-item"> <a href="" class="menu-nav-link">Студия</a></li>
-                        <li class="menu-nav-item"> <a href="./portfolio.html" class="menu-nav-link">Портфолио</a></li>
+                        <li class="menu-nav-item"> <a href="./index.html" class="menu-nav-link">Студия</a></li>
+                        <li class="menu-nav-item active"> <a href="./portfolio.html" class="menu-nav-link">Портфолио</a></li>
                         <li class="menu-nav-item"> <a href="" class="menu-nav-link">Контакты</a></li>
                     </ul>
             </nav>
@@ -57,7 +57,10 @@
                     <ul class="portfolio">
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr1.jpg" alt="computer" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr1.jpg" alt="computer" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                 <h2 class="image-title-port">Технокряк</h2>
                                 <p class="image-definition-port">Веб-сайт</p>
