--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Постер New Orlean vs Golden Star</h2>
                                     <p class="image-definition-port">Дизайн</p>
@@ -78,7 +81,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr3.jpg" alt="Ресторан Seafood" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr3.jpg" alt="Ресторан Seafood" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Ресторан Seafood</h2>
                                     <p class="image-definition-port">Приложение</p>
@@ -87,7 +93,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr4.jpg" alt="Проект Prime" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr4.jpg" alt="Проект Prime" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Проект Prime</h2>
                                     <p class="image-definition-port">Маркетинг</p>
@@ -96,7 +105,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr5.jpg" alt="Проект Boxes" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr5.jpg" alt="Проект Boxes" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Проект Boxes</h2>
                                     <p class="image-definition-port">Приложение</p>
@@ -105,7 +117,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr6.jpg" alt="Inspiration has no Borders" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr6.jpg" alt="Inspiration has no Borders" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Inspiration has no Borders</h2>
                                     <p class="image-definition-port">Веб-сайт</p>
@@ -114,7 +129,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr7.jpg" alt="Издание Limited Edition" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr7.jpg" alt="Издание Limited Edition" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Издание Limited Edition</h2>
                                     <p class="image-definition-port">Дизайн</p>
@@ -123,7 +141,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr8.jpg" alt="Проект LAB" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr8.jpg" alt="Проект LAB" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Проект LAB</h2>
                                     <p class="image-definition-port">Маркетинг</p>
@@ -132,7 +153,10 @@
                         </li>
                         <li class="portfolio-item">
                             <a href="" class="portfolio-link">
-                                <img src="./images/pr9.jpg" alt="Growing Business" width="370">
+                                <div class="portfolio-item-description-top">
+                                    <img src="./images/pr9.jpg" alt="Growing Business" width="370">
+                                    <p class="portfolio-item-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
                                 <div class="image-team-td-port">
                                     <h2 class="image-title-port">Growing Business</h2>
                                     <p class="image-definition-port">Приложение</p>
